--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 			border-bottom: 2px solid #2d8064;
 			list-style: none;
 		}
+		.content .history-caption{
+			margin-top: 35px;
+		}
+		.content #roll-history {
+			width: 60%;
+			margin: 0 auto 35px auto;
+		}
 		.content .dice-magic {
 			margin-top: 35px;
 		}
@@ -75,7 +82,7 @@
 		}
 		footer h6 {
 			font-size: 14px;
-			position: absolute;
+			position: fixed;
 			bottom: 0;
 		}
 	</style>
@@ -98,14 +105,31 @@
 		</ul>
 		
 		<p>Total</p>
-		<p id="total-value"></p>
+		<p id="total-value">0</p>
 		<p>Total Ability Plus</p>
-		<p id="total-ability-value"></p>
+		<p id="total-ability-value">0</p>
 		
 		<div class="dice-magic">
 			<div id="btn">Dice Magic</div>
 		</div>
 		<!-- History Liste einfügen -->
+		<span class="history-caption">Roll History</span>
+		<table id="roll-history">
+			<thead>
+				<tr>
+					<th class="caption">Gewürfelte Werte</th>
+					<th class="caption">Total Ability Plus</th>
+					<th class="caption">Total</th>
+				</tr>
+			</thead>
+			<tbody>
+				
+			</tbody>
+			
+			
+
+		</table>
+		
 	</div>
 	<footer>
 		<h6>Made by Matthias :)</h6>
@@ -116,6 +140,7 @@
 	const statlist = document.getElementById("statlist");
 	const totalValue = document.getElementById("total-value");
 	const totalAbilityValue = document.getElementById("total-ability-value");
+	const rollHistory = document.getElementById("roll-history");
 	
 	function diceMagic() {
 		/*
@@ -123,37 +148,81 @@
 		*/
 		let rolls = [];
 		/*
+		* Ability Plus Array zum abgleichen.
+		* Key ist der Wert value der Abilityplus in DnD
+		*/
+		const APA = new Array();
+		APA[1] = -5;
+		APA[2] = -4;
+		APA[3] = -4;
+		APA[4] = -3;
+		APA[5] = -3;
+		APA[6] = -2;
+		APA[7] = -2;
+		APA[8] = -1;
+		APA[9] = -1;
+		APA[10] = 0;
+		APA[11] = 0;
+		APA[12] = 1;
+		APA[13] = 1;
+		APA[14] = 2;
+		APA[15] = 2;
+		APA[16] = 3;
+		APA[17] = 3;
+		APA[18] = 4;
+		/*
 		* Zählvariable
 		*/
-		let i;
-		let n;
+		let i = 0;
+		let n = 0;
+		let m = 0;
 		/*
 		* Zwischenspeichervariable
 		*/
-		let x = null;
-		let y = null;
-		let z = null;
+		let a = null;
+		let b = null;
+		let c = null;
+		let d = null;
+		let e = null;
+		let f = null;
 		
 		/*------------- Logic geht los -------------*/
+		/*
+		* e ist zum übergeben an die history
+		*/
+		e = [];
 		for(n = 0; n <= 5; n++){
 			for(i = 0; i <= 3; i++) {
 				rolls.push( randomDice()/*Ergebnis des Rolls, passiert 4 mal*/);
 			}
 			
-			y = doMath(dropLowest(rolls));
+			b = doMath(dropLowest(rolls));
+			e[n] = b;
+			
 			/*
-			* rolls array to string in x, 
+			* rolls array to string in a, 
 			* dann alle "," durch ein "+" ersetzten
 			* der Inhalt der li Element wird mit den Zahlen ersetzt
 			* rolls wird für den nächsten Schleifendurchlauf zum leeren Array.
 			*/
-			x = rolls.toString();
-			x = x.replace(/,/g," + ");
-			statlist.children[n].innerHTML = x + ", drop(" + rolls[0] + ")" + " = " + y;
+			a = rolls.toString();
+			a = a.replace(/,/g," + ");
+			statlist.children[n].innerHTML = a + ", drop(" + rolls[0] + ")" + " = " + b  + " (" + APA[b] + ")";
 			rolls = [];
-			z = z + y;
+			
+			
+			c = c + b;
+			d = d + APA[b];
 		}
-		totalValue.innerHTML = z;
+		totalValue.innerHTML = c;
+		totalAbilityValue.innerHTML = d;
+		/*
+		* e to string 
+		* string wird lesbarer
+		*/
+		e = e.toString();
+		e = e.replace(/,/g,", ");
+		addToHistory(e, c, d);
 	}
 	
 	/* Rolling function
@@ -174,11 +243,11 @@
 	* Ignoriert dabei den ersten Wert, da Array sortiert und es sich um Legendary Rolls handelt.
 	*/
 	function doMath(array) {
-		y = 0;
+		b = 0;
 		for(i = 1; i < array.length; i++){
-			y = y + array[i];
+			b = b + array[i];
 		}
-		return y;
+		return b;
 	}
 	
 	/* Drop lowest function
@@ -188,7 +257,37 @@
 		array.sort(function(a, b){return a - b});
 		return array;
 	}
-
+	
+	/* Roll History
+	* Erstellt die Roll History
+	* Add 1 tr to table und call addToHistoryUl
+	*/
+	function addToHistory(valueB, valueC, valueD){
+		/*
+		* newTr erstellt immer neue table rows
+		* tr ist ein array mit allen tr's
+		*/
+		var newTr = document.createElement("tr");
+		var tr = document.getElementsByClassName("roll-history");
+		/*
+		*
+		*/
+		newTr.setAttribute('class',"roll-history");
+		rollHistory.appendChild(newTr);
+		m = rollHistory.children.length - 1;
+		
+		addToHistoryTr(valueB, m);
+		addToHistoryTr(valueD, m);
+		addToHistoryTr(valueC, m);
+	}
+	/*
+	* Add 1 td to the tr
+	*/
+	function addToHistoryTr(value, num){
+		var newTd = document.createElement("td");
+		newTd.appendChild(document.createTextNode(value));
+		rollHistory.children[num].appendChild(newTd)
+	}
 	
 	/*
 	* Führt alles aus, wenn btn geklickt wird.
