--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
-			font-family: 'Open Sans', sans-serif;
+			font-family: sans-serif;
+			font-weight: 400;
 			color: #0e1e35;
 			font-size: 24px;
 		}
