--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<div id="btn">Dice Magic</div>
 		</div>
 		<span class="options-caption">Optional</span>
-		<input type="number" id="dice-manipulator-min" placeholder="Mindest Total-Wert (36-108)" min="36" max="108">
+		<input type="number" id="dice-manipulator-min" placeholder="Minimal Total-Wert (36-108)" min="36" max="108">
 		<input type="number" id="dice-manipulator-max" placeholder="Maximaler Total-Wert (36-108)" min="36" max="108">
 		<!-- History Liste einfügen -->
 		<span class="history-caption">Roll History</span>
