--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			align-content: center;
 			justify-content: center;
 			text-align: center;
-			margin-bottom: 10%;
+			margin-bottom: 15px;
 			background: #295a56;
 			padding: 15px;
 			
