--- a/beta_index.html
+++ b/beta_index.html
@@ -21,16 +21,13 @@
 			color: #0e1e35;
 			font-size: 24px;
 		}
-		body {
-			
-		}
 		header {
 			display: flex;
 			flex-direction: column;
 			align-content: center;
 			justify-content: center;
 			text-align: center;
-			margin-bottom: 10%;
+			margin-bottom: 15px;
 			background: #295a56;
 			padding: 15px;
 			
@@ -49,7 +46,7 @@
 			align-content: center;
 			justify-content: center;
 			text-align: center;
-			width: 80%;
+			width: 90%;
 			margin: 0 auto;
 			
 			/*DEBUGING BORDER*/
@@ -69,7 +66,7 @@
 			margin-top: 35px;
 		}
 		.content #roll-history {
-			width: 60%;
+			width: 80%;
 			margin: 0 auto 35px auto;
 		}
 		.content .dice-magic {
@@ -89,6 +86,15 @@
 			font-size: 14px;
 			position: fixed;
 			bottom: 0;
+		}
+		.noselect {
+		  -webkit-touch-callout: none; /* iOS Safari */
+			-webkit-user-select: none; /* Safari */
+			 -khtml-user-select: none; /* Konqueror HTML */
+			   -moz-user-select: none; /* Firefox */
+				-ms-user-select: none; /* Internet Explorer/Edge */
+					user-select: none; /* Non-prefixed version, currently
+										  supported by Chrome and Opera */
 		}
 	</style>
 </head>
@@ -115,10 +121,10 @@
 		<p id="total-ability-value">0</p>
 		
 		<div class="dice-magic">
-			<div id="btn">Dice Magic</div>
+			<div class="noselect" id="btn">Dice Magic</div>
 		</div>
 		<span class="options-caption">Optional</span>
-		<input type="number" id="dice-manipulator-min" placeholder="Minimal Total-Wert (36-108)" min="36" max="108">
+		<input type="number" id="dice-manipulator-min" placeholder="Mindest Total-Wert (36-108)" min="36" max="108">
 		<input type="number" id="dice-manipulator-max" placeholder="Maximaler Total-Wert (36-108)" min="36" max="108">
 		<!-- History Liste einfügen -->
 		<span class="history-caption">Roll History</span>
@@ -202,27 +208,58 @@
 	var b;
 	
 	function diceMagic() {
-		totalRollValue = 0;
+		/*
+		* Die function fängt damit an sich einmal alles zu erwürfeln
+		* sollten die min / max nicht gegeben sein passiert nichts weiter.
+		*/
 		getAllValues();
 		
-		if(minDiceMan.value >= 36){
-			if(minDiceMan.value <= 108){
+		/* Die if's
+		* Die if >= 36 sind checks, ob der mindest Wert von 36 (6*6) gegeben ist.
+		* Die sind beim min Dice eig. überflüssig, da er immer auf über 36 kommt.
+		* Die if <= 108 sind checks, ob der maximale Wert von 108 (6*18) nicht überschritten wird.
+		* Die sind beim max Dice eig. überflüssig, da er nicht über 108 kommen kann.
+		*/
+		if(maxDiceMan.value >= 36 && minDiceMan.value >= 36){
+			if(maxDiceMan.value <= 108 && minDiceMan.value <= 108){
 				do{
 					getAllValues();
-				}while(minDiceMan.value > totalRollValue);
-				console.log("Sollte funktioniert haben");
+				}while(totalRollValue > maxDiceMan.value || totalRollValue < minDiceMan.value);
+				/*
+				+ Wenn der gewürfelte Wert über dem eingegebenen max. Wert liegt 
+				* ODER
+				* wenn der gewürfelte Wert unter dem eingegebenen min. Wert liegt
+				* werden 6 neue Werte gewürfelt.
+				*/
+			}
+		}else {
+			if(minDiceMan.value >= 36){
+				if(minDiceMan.value <= 108){
+					do{
+						getAllValues();
+					}while(totalRollValue < minDiceMan.value);
+					/*
+					* Wenn der gewürfelte Wert unter dem eingegebenen min. Wert liegt
+					* werden 6 neue Werte gewürfelt.
+					*/
+				}
+			}else{
+				if(maxDiceMan.value >= 36){
+					if(maxDiceMan.value <= 108){
+						do{
+							getAllValues();
+						}while(totalRollValue > maxDiceMan.value);
+						/*
+						* Wenn der gewürfelte Wert über dem eingegebenen max. Wert liegt
+						* werden 6 neue Werte gewürfelt.
+						*/
+					}
+				}
 			}
 		}
-		
-		if(maxDiceMan.value >= 36){
-			if(maxDiceMan.value <= 108){
-				do{
-					getAllValues();
-				}while(maxDiceMan.value < totalRollValue);
-				console.log("Hat vielleicht funktioniert");
-			}
-		}	
-		console.log("One done");
+		/*
+		* Sollte alles soweit gecheckt sein(if's und else's) werden die Werte angezeigt.
+		*/
 		displayValues();
 	}
 	
@@ -246,14 +283,25 @@
 			*/
 			rollString = allValues[n].toString();
 			rollString = rollString.replace(/,/g," + ");
+			//Total Ability Plus Value wird ausgerechnet
 			totalAbilityPlusValue = totalAbilityPlusValue + APA[rollValue];
 			
 			rollValueHistory[n] = rollValue;
-			
+			/* Beispielausgabe: 2 + 4 + 4 + 5, drop(2) = 13 (1)
+			* rollString = 2 + 4 + 4 + 5,
+			* allValues[n][0] = 2,
+			* rollValue = 13,
+			* APA[rollValue] = 1
+			*/
 			statlist.children[n].innerHTML =  rollString + ", drop(" + allValues[n][0] + ")" + " = " + rollValue  + " (" + APA[rollValue] + ")";
 		}
+		// Anzeige des Total-Wert
 		totalValue.innerHTML = totalRollValue;
+		//Anzeige des Total Ability Plus-Wert
 		totalAbilityValue.innerHTML = totalAbilityPlusValue;
+		/*
+		* Für die Roll History müssen einige Werte übergeben werden. diese werden in die Variablen geschrieben, wenn es sie noch nicht gibt
+		*/
 		rollString = rollValueHistory.toString();
 		rollString = rollString.replace(/,/g," + ");
 		addToHistory(rollString, totalAbilityPlusValue, totalRollValue);
