--- a/beta_index.html
+++ b/beta_index.html
@@ -239,7 +239,7 @@
 		* Die if <= 108 sind checks, ob der maximale Wert von 108 (6*18) nicht überschritten wird.
 		* Die sind beim max Dice eig. überflüssig, da er nicht über 108 kommen kann.
 		*/
-		if(maxDiceMan.value >= 36 && minDiceMan.value >= 36 && maxDiceMan.value > minDiceMan.value){
+		if(maxDiceMan.value >= 36 && minDiceMan.value >= 36 && (maxDiceMan.value + 1) > minDiceMan.value){
 			if(maxDiceMan.value <= 108 && minDiceMan.value <= 108){
 				do{
 					getAllValues();
