Reverten der letzten CSS Änderungen und farbliche Anspassungen. Roll History CSS Bug gefixt

--- a/html/beta.html
+++ b/html/beta.html
@@ -49,7 +49,7 @@
 				<table id="roll-history">
 					<thead>
 						<tr>
-							<th class="caption">Gewürfelte Werte</th>
+							<th class="caption">Rolled Value</th>
 							<th class="caption">Total Ability Plus</th>
 							<th class="caption">Total</th>
 						</tr>
