--- a/html/testing.html
+++ b/html/testing.html
@@ -4,8 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        ul {
+            color: #fff;
+        }
+    </style>
 </head>
-<body style="background: #333;">
-    <script src="../script/testing.js"></script>
+<body style="background: #333; display: flex;">
+    <ul>
+        <li>0: "1 + 6 + 3"</li>
+        <li>1: "1 + 5 + 4"</li>
+        <li>2: "1 + 4 + 5"</li>
+        <li>3: "1 + 3 + 6"</li>
+        <li>4: "2 + 6 + 2"</li>
+        <li>5: "2 + 5 + 3"</li>
+        <li>6: "2 + 4 + 4"</li>
+        <li>7: "2 + 3 + 5"</li>
+        <li>8: "2 + 2 + 6"</li>
+        <li>9: "3 + 6 + 1"</li>
+        <li>10: "3 + 5 + 2"</li>
+        <li>11: "3 + 4 + 3"</li>
+        <li>12: "3 + 3 + 4"</li>
+        <li>13: "3 + 2 + 5"</li>
+        <li>14: "3 + 1 + 6"</li>
+    </ul>
+    <ul>
+        <li>0: "1 + 6 + 3"</li>
+        <li>1: "1 + 5 + 4"</li>
+        <li>2: "1 + 4 + 5"</li>
+        <li>3: "1 + 3 + 6"</li>
+        <li>4: "2 + 6 + 2"</li>
+        <li>5: "2 + 5 + 3"</li>
+        <li>6: "2 + 4 + 4"</li>
+        <li>7: "2 + 3 + 5"</li>
+        <li>8: "2 + 2 + 6"</li>
+        <li>9: "3 + 6 + 1"</li>
+        <li>10: "3 + 5 + 2"</li>
+        <li>11: "3 + 4 + 3"</li>
+        <li>12: "3 + 3 + 4"</li>
+        <li>13: "3 + 2 + 5"</li>
+        <li>14: "3 + 1 + 6"</li>
+    </ul>
+    <ul>
+        <li>0: "1 + 6 + 3"</li>
+        <li>1: "1 + 5 + 4"</li>
+        <li>2: "1 + 4 + 5"</li>
+        <li>3: "1 + 3 + 6"</li>
+        <li>4: "2 + 6 + 2"</li>
+        <li>5: "2 + 5 + 3"</li>
+        <li>6: "2 + 4 + 4"</li>
+        <li>7: "2 + 3 + 5"</li>
+        <li>8: "2 + 2 + 6"</li>
+        <li>9: "3 + 6 + 1"</li>
+        <li>10: "3 + 5 + 2"</li>
+        <li>11: "3 + 4 + 3"</li>
+        <li>12: "3 + 3 + 4"</li>
+        <li>13: "3 + 2 + 5"</li>
+        <li>14: "3 + 1 + 6"</li>
+        <li>15: "4 + 5 + 1"</li>
+        <li>16: "4 + 4 + 2"</li>
+        <li>17: "4 + 3 + 3"</li>
+        <li>18: "4 + 2 + 4"</li>
+        <li>19: "4 + 1 + 5"</li>
+    </ul>
+    <script>
+
+        let possibleCharacters = [
+                        1,
+                        2,
+                        3,
+                        4,
+                        5,
+                        6
+                    ]
+        let i = 0;
+        let j = 0;
+        let desiredValue = 10;
+        let possibleCombinations = [];
+
+        function doIt() {
+            for(i = 0; i <= possibleCharacters.length && j <= possibleCharacters.length; j++) {
+                let missing;
+                if( possibleCharacters[i] + possibleCharacters[(possibleCharacters.length - ( j + 1))] < desiredValue ) {
+                    missing = desiredValue - parseInt( possibleCharacters[i] + possibleCharacters[possibleCharacters.length - ( j + 1 )] );
+                    possibleCombinations.push( possibleCharacters[i] + " + " + possibleCharacters[possibleCharacters.length - ( j + 1 )] + " + " + possibleCharacters[missing-1] );
+                }
+                if( missing === possibleCharacters[possibleCharacters.length - 1] || possibleCharacters[i] + possibleCharacters[0] + possibleCharacters[missing-1] == desiredValue && possibleCharacters[missing-1] < possibleCharacters[possibleCharacters.length-1]){
+                    i++;
+                    j = -1;
+                }
+            }
+        }
+
+        
+
+    </script>
 </body>
 </html>
