Irgendwie noch weitergemacht an dem Stat Objekt. Es ist nun an ein element gebunden und der legendary roll funktioniert nicht mehr :/

--- a/html/beta.html
+++ b/html/beta.html
@@ -39,6 +39,10 @@
 
 			<div class="option-wrapper">
 				<p class="options-caption">Optional</p>
+				<div id="dm-mode-wrapper">
+					<input type="checkbox" id="dm-mode">
+					<label for="dm-mode">DM Mode</label>
+				</div>
 				<input type="number" id="multi-char-roll" placeholder="Wie viele Charaktere? Wenn nichts ausgewählt 1.">
 				<input type="number" id="dice-manipulator-min" placeholder="Mindest Total-Wert (36-108)" min="36" max="108">
 				<input type="number" id="dice-manipulator-max" placeholder="Maximaler Total-Wert (36-108)" min="36" max="108">
